feat: added attack

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,5 +9,18 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <div class="hint">
+      <div class="wasd-container">
+        <div class="key-gap"></div>
+        <div class="key">W</div>
+        <div class="key-gap"></div>
+        <div class="key">A</div>
+        <div class="key">S</div>
+        <div class="key">D</div>
+      </div>
+      <div class="space-container">
+        <div class="key">Space</div>
+      </div>
+    </div>
   </body>
 </html>
